<?xml version="1.0"?>
<package>
  <name>power_tools</name>
  <version>0.0.1</version>
  <description>The power_tools package</description>
  <maintainer email="calder.pg@gmail.com">Calder Phillips-Grafflin</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
    <metapackage/>
  </export>
</package>
